# PPT-Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
assets/: academic_template.pptx
claude-config/: README.md
claude-config/agents/: ppt-agent.md
claude-config/skills/academic-pptx/: SKILL.md
examples/: demo.py
scripts/: gen_design_system.py
src/ppt_agent/: __init__.py  cli.py  config.py  models.py  themes.py
src/ppt_agent/llm/: __init__.py  base.py  claude_llm.py  deepseek_llm.py  gemini_llm.py
src/ppt_agent/pipeline/: __init__.py  analyzer.py  content.py  geometry.py  image_sourcer.py  layouts.py  mcp_client.py  mcp_renderer.py  orchestrator.py  outliner.py  validator.py  visual_qa.py
src/ppt_agent/template_learning/: __init__.py  extractor.py  layout_classifier.py  spatial_analyzer.py
src/ppt_agent/templates/: __init__.py  teaching.py  thesis_defense.py  work_report.py
src/ppt_agent/utils/: academic.py  charts.py  data_loader.py  fonts.py  image_search.py  pdf_export.py  preview.py  quality_check.py  slide_editor.py  template_analyzer.py
tests/: render_smoke.py  test_geometry.py  test_image_sourcing.py  test_llm_json.py  test_theme_and_hex.py  test_validator.py  test_visual_qa_ink.py
