[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt-agent"
version = "0.1.0"
description = "AI-powered PPT generation agent with multi-model support"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "google-genai>=2.0.0",
    "python-pptx>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0"]
gui = ["streamlit>=1.40"]

[project.scripts]
ppt-agent = "ppt_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
